<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.armadillo.team.sunkagame.MenuActivity">

    <Button
        android:id="@+id/Play_human"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:onClick="play_human_button"
        android:text="@string/play_human"
        android:layout_above="@+id/Play_comp"
        android:background="@drawable/store" />

    <Button
        android:id="@+id/Play_comp"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:onClick="play_comp_button"
        android:text="@string/play_comp"
        android:layout_above="@+id/Help_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/store" />

    <Button
        android:id="@+id/Help_button"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:onClick="help_button"
        android:text="@string/help_text"
        android:background="@drawable/store"
        android:layout_above="@+id/Scores_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/Scores_button"
        android:text="@string/Score_button"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:onClick="score_button"
        android:background="@drawable/store"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="450dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:background="@drawable/sunka"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
